Fix issue with hero fixed sizes causing gap

--- a/new-version/index.css
+++ b/new-version/index.css
@@ -157,7 +157,7 @@ section.theme--light, footer.theme--light {
   position: sticky;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 .title-card__container-outer {
@@ -165,7 +165,7 @@ section.theme--light, footer.theme--light {
   width: 600px;
   margin: 0 auto;
   padding-bottom: 25vh;
-  transform: translateY(-100vh);
+  transform: translateY(-75vh);
 }
 
 .title-card__container-inner {
